k8s-do/heritageflix-paintings/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heritageflix-paintings
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heritageflix-paintings
  template:
    metadata:
      labels:
        app: heritageflix-paintings
    spec:
      containers:
        - name: app
          image: ghcr.io/netwerk-digitaal-erfgoed/heritageflix-paintings
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ghcr
