k8s-do/heritageflix-paintings/service.yml
apiVersion: v1
kind: Service
metadata:
  name: heritageflix-paintings
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: heritageflix-paintings
